--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 *.war
 *.ear
 
+# IDEA files
+.idea/workspace.xml
+.idea/tasks.xml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
